optimizations fixes